# Modelador3D

./: CMakeLists.txt  README  README.md  cg  cubo.cpp  cubo.hpp  glad.c  interacoes.txt  main.cpp  math.cpp  math.hpp  pipeline.cpp  pipeline.hpp  scene.cpp  scene.hpp
include/glad/: glad.h
